--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function test(sender, args){
                 <p style="color: rgb(228, 228, 228); font-size: 15px;">
                     JavaScript is a modern language powering websites
                     <br>
-                    and companies such as Neflix and Microsoft.
+                    and companies such as Netflix and Microsoft.
                 </p>
             </h4>
         </div>
