--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@
                 Drupi is a plugin that allows you to create custom plugins easily using JavaScript that are cross-compatible between Minecraft: Java and Bedrock Edition. To get started with Drupi, click here to download our plugin for Spigot or Nukkit respectively, restart your server and begin coding your first Drupi plugin!
             </p>
             <a href="https://github.com/drupijs/Drupi-JS/wiki/Getting-Started" target="_blank">
-                <button type="button" class="btn btn-primary">Get Started</button>
+                <button type="button" class="btn btn-primary" style="background-color: #333; border-color: #333;"><i class="fab fa-github"></i> Get Started / Wiki Page</button>
+            </a>
+            <a href="https://www.spigotmc.org/resources/drupi-js.65706/" target="_blank">
+                <button type="button" class="btn btn-primary" style="background-color: #ed8106; border-color: #ed8106;"><img src="https://avatars1.githubusercontent.com/u/4350249?s=280&v=4" style="position: absolute; height: 35px; margin-top: -5px; margin-left: -5px;"><span style="margin-left: 35px;">SpigotMC</span></button>
+            </a>
+            <a href="https://discord.gg/hEwaxsN" target="_blank">
+                <button type="button" class="btn btn-primary" style="background-color: #23272A; border-color: #23272A;"><i class="fab fa-discord"></i> Community Discord</button>
+            </a>
+            <a href="https://bstats.org/plugin/bukkit/Drupi" target="_blank">
+                <button type="button" class="btn btn-primary" style="background-color: #F44336; border-color: #F44336;"><i class="fas fa-poll"></i> bStats</button>
             </a>
         </div>
     </div>
