Added performance results to the webpage

--- a/index.html
+++ b/index.html
@@ -176,6 +176,37 @@ function test(sender, args){
         </div>
     </div>
     <div class="row" style="padding-top: 75px; padding-bottom: 50px;">
+        <div class="mx-auto" style="width: 70%; height: 2px; background: rgba(255, 255, 255, 0.3); border-radius: 5px;"> </div>
+        <h1 class="mx-auto" style="color: white; padding-top: 50px;">
+            Performance Results - Drupi <img style="height: 50px;" src="jsLOGO.png"> Vs Skript
+        </h1>
+    </div>
+    <div class="row" style="font-family: 'Roboto', sans-serif; color: white;">
+        <div class="col-sm" style="text-align: center;">
+            <p>
+                These results are made using <a href="https://www.spigotmc.org/resources/toplite.1140/" style="color: rgb(255, 255, 255);">TopLite</a>
+                Both Drupi and Skript have 1 command and 1 event (PlayerJoinEvent) registered.
+            </p>
+            <p>
+                After 22 Seconds:
+                <br>
+                <img src="bench22s.png" style="height: 150px;">
+            </p>
+            <p>
+                After 128 Seconds:
+                <br>
+                <img src="bench120s.png" style="height: 150px;">
+            </p>
+            <br>
+            <p>
+                <h6>Heavy load test</h6>
+                This test is where Drupi is hosting a discord bot playing music while skript have no skripts loaded at all.
+                <br>
+                <img src="bigbench.png" style="height: 150px;">
+            </p>
+        </div>
+    </div>
+    <div class="row" style="padding-top: 75px; padding-bottom: 50px;">
         <div class="mx-auto" style="width: 50%; height: 2px; background: rgba(255, 255, 255, 0.3); border-radius: 5px;"> </div>
         <h1 class="mx-auto" style="color: white; padding-top: 50px;">
             Communities already using Drupi <img style="height: 50px;" src="jsLOGO.png">
@@ -202,7 +233,7 @@ function test(sender, args){
                 <p style="color: rgb(228, 228, 228); font-size: 15px;">
                     <a href="https://hypermc.dk/" target="_blank" style="color: white;">HyperMC</a> is a small community
                     <br>
-                    wich offers unlimited free server hosting for the java edition.
+                    which offers unlimited free server hosting for the java edition.
                 </p>
             </h4>
         </div>
